--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -26,15 +28,36 @@ img {
   border-radius: 16px;
 }
 
+main {
+  padding: 24px;
+}
+
+section + section {
+  margin-top: 24px;
+}
+
+#about p + p {
+  margin-top: 12px;
+}
+
 h1 {
   font-size: 40px;
   line-height: 140%;
+
+  
 }
 
 h2 {
   font-size: 24px;
+  
 }
 
 h1, h2 {
   color: #291b1a;
+  margin-bottom: 4px;
+  line-height: 150%;
+}
+
+ul {
+  padding-left: 24px;
 }
