--- a/style.css
+++ b/style.css
@@ -12,7 +12,9 @@
 
 body {
   background-image: url(./assets/bg.jpg);
+  
   background-size: cover;
+  background-color: black;
 }
 
 #page {
@@ -21,7 +23,7 @@ body {
   background-color: #F0E8C2;
   border-radius: 24px;
 
-  margin: 48px auto;
+  margin: 48px auto 28px;
 }
 
 img {
@@ -60,4 +62,14 @@ h1, h2 {
 
 ul {
   padding-left: 24px;
+}
+
+footer {
+  color: #F0E8C2;
+  text-align: center;
+  padding-bottom: 18px;
+}
+
+footer img {
+  vertical-align: middle;
 }
